# discord

./: Time.py  api.py  command_loader.py  helper.py  keep_alive.py  main.py  pyproject.toml  readme.md  sheet.py
commands/: bmi.py  bongo.py  cheab.py  class.py  clear.py  date.py  debug.py  dog.py  heyo.py  info.md  info.py  japan.py  kfc.py  ping.py  quote.py  random.py  readme.md  role.py  status.py  template.md  template.txt  timeleft.py
src/: add.txt  cheab.txt  eng.txt  movie.txt  nav.txt  schedule.xlsx  subject.txt  thai.txt  vocab.txt
temp/: japan.py  kfc.py  popcorn.py  prame.py  random.py  register.py  vocab.py  web.py
