[tool.poetry]
name = "repl_python3_discord"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
replit = "^3.1.0"
function = "^1.2.0"
compiler = "^0.2.0"
pytz = "^2021.1"
pandas = "^1.3.4"
ipython = "^7.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"